# cpp-web-scraper

./: .gitignore  CMakeLists.txt  README.md
include/: ResultFile.h  ScrapedPage.h  Utilities.h  WebScraper.h
src/: ResultFile.cpp  ScrapedPage.cpp  Utilities.cpp  WebScraper.cpp  main.cpp
